# climate-api

./: Dockerfile  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml  pylint.yml  pytest.yml  test.yml
alembic/: env.py
alembic/versions/: 0dbac9a36110_goals_update.py  61a8a9fb972b_years_update.py  a5cf076c5162_initial_db.py
src/climate_api/: __about__.py  crud.py  database.py  main.py
src/climate_api/internal/: Company.py  CompanyYear.py  Goal.py  Year.py  __init__.py
src/climate_api/models/: Company.py  Goal.py  Year.py  __init__.py
src/climate_api/populate_db/: fix_goals.py  populate_db.py
src/climate_api/routers/: companies.py  years.py
tests/: __init__.py  test_companies.py  test_crud.py  test_years.py
