[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate-api"
dynamic = ["version"]
description = 'API for Fortune 100 Company Emission Data'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wjsharpe41", email = "wjsharpe41@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "sqlalchemy",
  "fastapi",
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/wsharpe41/climate-api#readme"
Issues = "https://github.com/wsharpe41/climate-api/issues"
Source = "https://github.com/wsharpe41/climate-api"

[tool.hatch.version]
path = "src/climate_api/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/climate_api tests}"

[tool.coverage.run]
source_pkgs = ["climate_api", "tests"]
branch = true
parallel = true
omit = [
  "src/climate_api/__about__.py",
]

[tool.coverage.paths]
climate_api = ["src/climate_api", "*/climate-api/src/climate_api"]
tests = ["tests", "*/climate-api/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
